@@ -103,8 +103,8 @@ def test_base_response():
     assert response.data == 'öäü'
 
     # writing
-    response = BaseResponse('foo')
-    response.write('bar')
+    response = Response('foo')
+    response.stream.write('bar')
     assert response.data == 'foobar'
 
     # set cookie
